Latest on wct.  New twitter4j lib.  Emailme infrastructure.

--- a/source/emailtemplates/emailfooter.html
+++ b/source/emailtemplates/emailfooter.html
@@ -11,7 +11,7 @@
 </table>
 
 <br/><br/>
-<font style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 8px;">Change email preferences on your Account Settings screen.</font>
+<font style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 8px;"></font>
 
 
 </body>
