--- a/source/emailtemplates/emailheader.html
+++ b/source/emailtemplates/emailheader.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title>Email from CelebTwit</title>
+	<title></title>
 </head>
 
 <body LEFTMARGIN="0" TOPMARGIN="0" MARGINWIDTH="0" MARGINHEIGHT="0" bgcolor="#ffffff" text=#000000 >
